vetproject/src/main/java/com/example/vetproject/error/NotFoundException.java
/*package com.example.vetproject.error;

public class NotFoundException extends RuntimeException {
    private Long id;

    public NotFoundException(Long id) {
        this.id = id;
    }   

    Long getId() {
        return id;
    }

    public void setId(Long id) {
        this.id = id;
    }
}*/